syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "BrassLoon.Interface.Address.Protos";

service PhoneService {
    rpc Get(GetPhoneRequest) returns (Phone);
    rpc Save(Phone) returns (Phone);
}

message Phone {
	string PhoneId = 1;
	string DomainId = 2;
	string Number = 3;
    string CountryCode = 4;
    google.protobuf.Timestamp CreateTimestamp = 5;
}

message GetPhoneRequest {
    string DomainId = 1;
    string PhoneId = 2;
}